# advanced_cpp

./: .gitignore
compilation_and_linking/task_1/: main.cpp  task_1.sln  task_1.vcxproj
ini_parser/: CMakeLists.txt  main.cpp
ini_parser/examples/: CMakeLists.txt  example.cpp
ini_parser/include/: Exceptions.hpp  IFileReader.hpp  IniData.hpp  IniParser.hpp  IniSymbols.hpp  StdFileReader.hpp  SyntaxValidator.hpp  ValueConverter.hpp
ini_parser/src/: CMakeLists.txt  Exceptions.cpp  IniData.cpp  IniParser.cpp  StdFileReader.cpp  SyntaxValidator.cpp
ini_parser/tests/: CMakeLists.txt  error_handling_tests.cpp  ini_data_tests.cpp  parser_integration_test.cpp  syntax_validator_tests.cpp  value_converter_tests.cpp
ini_parser/tests/test_data/: invalid.ini  valid.ini
move_semantic/task_1/: main.cpp  task_1.sln  task_1.vcxproj
move_semantic/task_2/: big_integer.hpp  main.cpp  task_2.sln  task_2.vcxproj
raii/task_1/: main.cpp  task_1.sln  task_1.vcxproj
raii/task_2/: main.cpp  task_2.sln  task_2.vcxproj
smart_pointers/task_1/: main.cpp  task_1.sln  task_1.vcxproj  task_1.vcxproj.filters  tridiagonal_matrix.hpp
smart_pointers/task_2/: task_2.sln  task_2.vcxproj
smart_pointers/task_3/: main.cpp  task_3.sln  task_3.vcxproj  task_3.vcxproj.filters  unique_ptr.hpp
stl_1/task_1/: main.cpp  task_1.sln  task_1.vcxproj
stl_1/task_2/: main.cpp  task_2.sln  task_2.vcxproj
stl_1/task_3/: MyVector.hpp  main.cpp  task_3.sln  task_3.vcxproj  task_3.vcxproj.filters
stl_2/task_1/: main.cpp  task_1.sln  task_1.vcxproj
stl_2/task_2/: main.cpp  task_2.sln  task_2.vcxproj
templates_and_functors/: my_square.hpp  templates_and_functors.sln  templates_and_functors.vcxproj  templates_and_functors.vcxproj.filters
templates_and_functors/task_1/: main.cpp  task_1.sln  task_1.vcxproj  task_1.vcxproj.filters
templates_and_functors/task_2/: main.cpp  table.hpp  task_2.sln  task_2.vcxproj  task_2.vcxproj.filters
templates_and_functors/task_3/: counter.hpp  main.cpp  task_3.sln  task_3.vcxproj  task_3.vcxproj.filters
tests/task_1/: CMakeLists.txt  main.cpp
tests/task_2/: CMakeLists.txt  main.cpp
